<resources>
    <string name="app_name">surya_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Surya Hospitals</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="about_us">About Us</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_paediatrics">Paediatrics</string>
    <string name="menu_women_care">Women Care</string>
    <string name="menu_laproscopy_and_endoscopy">Laproscopy and Endoscopy</string>
    <string name="menu_fertility_and_fetal">Fertility and Fetal Medicine</string>
    <string name="menu_outpatient_services">Outpatient Services</string>
    <string name="menu_inpatient_services">Inpatient Services</string>
    <string name="menu_emergency_services">Emergency Services</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="menu_school_programme">School Programme</string>
    <string name="menu_neonatal">Neonatal Care</string>
    <string name="menu_share">Neonatal Care</string>
    <string name="menu_paediatricsuperspeciality">Paediatric Superspeciality</string>

    <string name="button_PICU"><u>PICU</u></string>
    <string name="button_general_pediatrics"><u>General Paediatrics</u></string>
    <string name="button_allergology"><u>Allergology</u></string>
    <string name="button_anaesthesiology"><u>Anaesthesiology</u></string>
    <string name="button_clinical_psychology"><u>Clinical Psychology</u></string>
    <string name="button_community_medicine"><u>Community Medicine</u></string>
    <string name="button_dermatology"><u>Dermatology</u></string>
</resources>
