<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.surya_app.ui.home.ItemFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.surya_app.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointment"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_paediatrics"
        android:name="com.example.surya_app.ui.Paediatric.PediatricFragment"
        android:label="@string/menu_paediatrics"
        tools:layout="@layout/fragment_paediatrics" />


    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.surya_app.ui.tools.ToolsFragment"
        android:label="@string/menu_paediatricsuperspeciality"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_neonatal"
        android:name="com.example.surya_app.ui.neonatal.NeonatalFragment"
        android:label="@string/menu_neonatal"
        tools:layout="@layout/fragment_neonatal" />

    <fragment
        android:id="@+id/nav_peadiatric_superspeciality"
        android:name="com.example.surya_app.ui.women_care.women_careFragment"
        android:label="@string/menu_women_care"
        tools:layout="@layout/fragment_pediatric_superspeciality" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.surya_app.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.surya_app.ui.paediatric_superspeciality.paediatric_superspecialityFragment"
        android:label="@string/menu_paediatricsuperspeciality"
        tools:layout="@layout/fragment_send" />
</navigation>